QTextCharFormat::setFont(): Preserve the font hinting preference

Task-number: QTBUG-22653

Change-Id: I9153486ff7793ba4427b64459896ab1328d51548
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>

cregit: 731f2a179b2056509582ac66641cdd3c846ac9dc https://github.com/qt/qtbase/commit/731f2a179b2056509582ac66641cdd3c846ac9dc